Changed photo upload method
