# doc/api.yaml
@@ -161,16 +161,12 @@ components:
           type: string
           format: date
           example:  "2023-12-25"
-    PhotoFile:
-      description: "Binary file of a photo"
-      type: object
-      properties:
-        data:
-          description:  "Data of the photo"
+        file:
+          description:  "Binary file of the photo"
           type: string
           format: binary
-          minLength:  0
-          maxLength:  200
+          minLength: 0
+          maxLength: 200
           example:  "00100110"
     Comment:
       title:  Comment
@@ -406,7 +402,7 @@ paths:
         content:
           image/*:
             schema:
-              $ref: "#/components/schemas/PhotoFile"
+              $ref: "#/components/schemas/Photo/properties/file"
       responses:
         "201":
           description:  "Photo uploaded successfully"
