# service/api/upload-photo.go
@@ -5,10 +5,9 @@ import (
 	"WASAPhoto/service/database"
 	"encoding/json"
 	"github.com/julienschmidt/httprouter"
-	"io"
+	"io/ioutil"
 	"net/http"
-	"os"
-	"path/filepath"
+	"strings"
 	"time"
 )
 
@@ -23,50 +22,38 @@ func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httpro
 		return
 	}
 
+	file, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	contentType := r.Header.Get("Content-Type")
+	if strings.HasPrefix(contentType, "image/") {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
 	creationTime := time.Now()
 	photoId, err := rt.db.CreatePhoto(database.Photo{
 		UserId:   loggedUser,
 		Likes:    nil,
 		Comments: nil,
 		Date:     creationTime,
+		File:     file,
 	})
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
-	photoFile, _, err := r.FormFile("photoFile")
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// Create empty file for the data of the photo
-	dst, err := os.Create(filepath.Join(userUploads, userId, string(rune(photoId))))
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	_, err = io.Copy(dst, photoFile)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	err = photoFile.Close()
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	w.WriteHeader(http.StatusOK)
 	err = json.NewEncoder(w).Encode(Photo{
 		PhotoId:  photoId,
 		UserId:   userId,
 		Likes:    nil,
 		Comments: nil,
 		Date:     creationTime,
+		File:     file,
 	})
 
 	if err != nil {
